// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ObjectSetListenerWebsocket > basic setup > requests subscription > successfully subscribed > should correctly return reference update 1`] = `
{
  "object": {
    "$apiName": "Employee",
    "$metadata": {
      "apiName": "Employee",
      "description": "A full-time or part-time 

 employee of our firm",
      "displayName": "Employee",
      "icon": {
        "color": "blue",
        "name": "person",
        "type": "blueprint",
      },
      "implements": [
        "FooInterface",
      ],
      "interfaceMap": {
        "FooInterface": {
          "fooSpt": "fullName",
        },
      },
      "inverseInterfaceMap": {
        "FooInterface": {
          "fullName": "fooSpt",
        },
      },
      "links": {
        "lead": {
          "multiplicity": false,
          "targetType": "Employee",
        },
        "officeLink": {
          "multiplicity": false,
          "targetType": "Office",
        },
        "peeps": {
          "multiplicity": true,
          "targetType": "Employee",
        },
      },
      "pluralDisplayName": "Employees",
      "primaryKeyApiName": "employeeId",
      "primaryKeyType": "integer",
      "properties": {
        "class": {
          "description": "",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "string",
        },
        "employeeId": {
          "description": undefined,
          "displayName": undefined,
          "multiplicity": false,
          "nullable": false,
          "type": "integer",
        },
        "employeeLocation": {
          "description": "Geotime series reference of the location of the employee",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "geotimeSeriesReference",
        },
        "employeeSensor": {
          "description": "TimeSeries sensor of the status of the employee",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "sensorTimeseries",
        },
        "employeeStatus": {
          "description": "TimeSeries of the status of the employee",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "stringTimeseries",
        },
        "fullName": {
          "description": undefined,
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "string",
        },
        "office": {
          "description": "The unique "ID" of the employee's \\"primary\\" assigned office.
 This is some more text.",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "string",
        },
        "startDate": {
          "description": "The date the employee was hired (most recently, if they were re-hired)",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "datetime",
        },
      },
      "rid": "ri.ontology.main.object-type.401ac022-89eb-4591-8b7e-0a912b9efb44",
      "status": "ACTIVE",
      "titleProperty": "fullName",
      "type": "object",
      "visibility": "NORMAL",
      Symbol(InterfaceDefinitions): {
        "FooInterface": {
          "def": {
            "apiName": "FooInterface",
            "description": "Interface for Foo",
            "displayName": "Foo Interface",
            "implementedBy": [
              "Employee",
              "Person",
            ],
            "implements": [],
            "links": {},
            "properties": {
              "fooSpt": {
                "description": "A foo",
                "displayName": "Foo",
                "multiplicity": false,
                "nullable": true,
                "type": "string",
              },
            },
            "rid": "ri.interface.main.interface.1",
            "type": "interface",
          },
          "handler": undefined,
        },
      },
    },
    "$objectSpecifier": "Employee:12345",
    "$objectType": "Employee",
    "$primaryKey": "12345",
    "$title": undefined,
    "employeeId": "12345",
    "employeeLocation": GeotimeSeriesPropertyImpl {
      "lastFetchedValue": {
        "time": "111",
        "value": {
          "coordinates": [
            100,
            200,
          ],
          "type": "Point",
        },
      },
    },
  },
  "state": "ADDED_OR_UPDATED",
}
`;

exports[`ObjectSetListenerWebsocket > basic setup > requests subscription > successfully subscribed > should correctly return regular updates 1`] = `
{
  "object": {
    "$apiName": "Employee",
    "$metadata": {
      "apiName": "Employee",
      "description": "A full-time or part-time 

 employee of our firm",
      "displayName": "Employee",
      "icon": {
        "color": "blue",
        "name": "person",
        "type": "blueprint",
      },
      "implements": [
        "FooInterface",
      ],
      "interfaceMap": {
        "FooInterface": {
          "fooSpt": "fullName",
        },
      },
      "inverseInterfaceMap": {
        "FooInterface": {
          "fullName": "fooSpt",
        },
      },
      "links": {
        "lead": {
          "multiplicity": false,
          "targetType": "Employee",
        },
        "officeLink": {
          "multiplicity": false,
          "targetType": "Office",
        },
        "peeps": {
          "multiplicity": true,
          "targetType": "Employee",
        },
      },
      "pluralDisplayName": "Employees",
      "primaryKeyApiName": "employeeId",
      "primaryKeyType": "integer",
      "properties": {
        "class": {
          "description": "",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "string",
        },
        "employeeId": {
          "description": undefined,
          "displayName": undefined,
          "multiplicity": false,
          "nullable": false,
          "type": "integer",
        },
        "employeeLocation": {
          "description": "Geotime series reference of the location of the employee",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "geotimeSeriesReference",
        },
        "employeeSensor": {
          "description": "TimeSeries sensor of the status of the employee",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "sensorTimeseries",
        },
        "employeeStatus": {
          "description": "TimeSeries of the status of the employee",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "stringTimeseries",
        },
        "fullName": {
          "description": undefined,
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "string",
        },
        "office": {
          "description": "The unique "ID" of the employee's \\"primary\\" assigned office.
 This is some more text.",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "string",
        },
        "startDate": {
          "description": "The date the employee was hired (most recently, if they were re-hired)",
          "displayName": undefined,
          "multiplicity": false,
          "nullable": true,
          "type": "datetime",
        },
      },
      "rid": "ri.ontology.main.object-type.401ac022-89eb-4591-8b7e-0a912b9efb44",
      "status": "ACTIVE",
      "titleProperty": "fullName",
      "type": "object",
      "visibility": "NORMAL",
      Symbol(InterfaceDefinitions): {
        "FooInterface": {
          "def": {
            "apiName": "FooInterface",
            "description": "Interface for Foo",
            "displayName": "Foo Interface",
            "implementedBy": [
              "Employee",
              "Person",
            ],
            "implements": [],
            "links": {},
            "properties": {
              "fooSpt": {
                "description": "A foo",
                "displayName": "Foo",
                "multiplicity": false,
                "nullable": true,
                "type": "string",
              },
            },
            "rid": "ri.interface.main.interface.1",
            "type": "interface",
          },
          "handler": undefined,
        },
      },
    },
    "$objectSpecifier": "Employee:undefined",
    "$objectType": "Employee",
    "$primaryKey": undefined,
    "$title": undefined,
    "employeeId": 1,
  },
  "state": "ADDED_OR_UPDATED",
}
`;
